--- a/index.html
+++ b/index.html
@@ -4,12 +4,80 @@
     <meta charset="UTF-8">
     <title>Backbone.js Application</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css" rel="stylesheet">
+</head>
+<body>
+    <div class="container">
+        <div class="page-header">
+            <h1>Backbone.js Application</h1>
+            <p class="lead">
+                <a href="/#person/add" class="btn btn-default pull-right"><span class="glyphicon glyphicon glyphicon-plus" aria-hidden="true"></span></a>
+                Simple Backbone.js CRUD application for managing persons.
+            </p>
+        </div>
+        <div class="row">
+            <div class="col-xs-12" id="content"></div>
+        </div>
+    </div>
+    <script type="text/template" id="template-person-index">
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Occupation</th>
+                    <th>Actions</th>
+                </tr>
+            </thead>
+            <tbody>
+            <% _.each(persons, function(person) { %>
+                <tr>
+                    <td><%= person.id %></td>
+                    <td><%= person.lastName + ', ' + person.firstName %></td>
+                    <td><%= person.age %></td>
+                    <td><%= person.occupation %></td>
+                    <td>
+                        <div class="btn-group" role="group">
+                            <a href="/#person/edit/<%= person.id %>" class="btn btn-xs btn-default"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+                            <a href="/#person/delete/<%= person.id %>" class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></a>
+                        </div>
+                    </td>
+                </tr>
+                <% }); %>
+            </tbody>
+        </table>
+    </script>
+    <script type="text/template" id="template-person-add">
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="well">
+                    <form>
+                        <div class="form-group">
+                            <label for="input-first-name">First Name:</label>
+                            <input type="text" name="first_name" id="input-first-name" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <label for="input-last-name">Last Name:</label>
+                            <input type="text" name="last_name" id="input-last-name" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="btn btn-primary">Submit</button>
+                            <a href="/#person/index" class="btn btn-default">Cancel</a>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </script>
     <script src="/js/vendor/jquery-2.2.4.js"></script>
     <script src="/js/vendor/underscore.js"></script>
     <script src="/js/vendor/backbone.js"></script>
     <script src="/js/vendor/backbone.localStorage.js"></script>
-</head>
-<body>
-    
+    <script src="/js/router/person.js"></script>
+    <script src="/js/model/person.js"></script>
+    <script src="/js/collection/person.js"></script>
+    <script src="/js/view/person/index.js"></script>
+    <script src="/js/view/person/add.js"></script>
+    <script src="/js/app.js"></script>
 </body>
 </html>
